TestSuite/errors/err0378.pas
uses NUnitABC;

[Test, Combinatorial]
procedure TestPrime4([Values(a)] a: real; 
  [RangeAttribute(1,200)] b: real);
begin
end;

begin
end.